@@ -4,7 +4,16 @@
 ## --SECTION--                                                   COMMON INCLUDES
 ## -----------------------------------------------------------------------------
 
+################################################################################
+### @brief local directory
+################################################################################
+
 include_directories(.)
+
+################################################################################
+### @brief library source
+################################################################################
+
 include_directories(${PROJECT_SOURCE_DIR}/lib)
 
 ## -----------------------------------------------------------------------------
@@ -146,6 +155,10 @@ target_link_libraries(
     ${CMAKE_THREAD_LIBS_INIT}
     ${MSVC_LIBS}
 )
+
+################################################################################
+### @brief install arangod binary
+################################################################################
 
 install(
   TARGETS ${BIN_ARANGOD}
